Fix invalid CSS vertical-align value for .fancy-datepicker-core
Summary:
`vertical-align: center` is not a valid value per https://developer.mozilla.org/en-US/docs/Web/CSS/vertical-align.
Likely `middle` was meant.

Test Plan: Read CSS docs; check output of your web browser console. (Interstingly, https://jigsaw.w3.org/css-validator/validator does not complain.)

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Differential Revision: https://we.phorge.it/D25920

--- a/webroot/rsrc/css/phui/phui-form-view.css
+++ b/webroot/rsrc/css/phui/phui-form-view.css
@@ -402,7 +402,7 @@ body .phui-form-view .remarkup-assist-textarea.aphront-textarea-drag-and-drop {
 
 .fancy-datepicker-core .day-table td {
   overflow: hidden;
-  vertical-align: center;
+  vertical-align: middle;
   text-align: center;
   border: 1px solid {$thinblueborder};
   padding: 4px 0;
